--- a/BodyMassIndexCalculator/style.css
+++ b/BodyMassIndexCalculator/style.css
@@ -1,1 +1,34 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,500&display=swap');
+body, html{
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+.container{
+    border: 3px solid green;
+    margin: 5px;
+    padding: 10px;
+    background-color:rgb(50, 240, 196);
+
+}
+
+input{
+    width: 250px;
+    padding: 2px
+}
+
+button{
+    padding: 15px;
+    border-style: none;
+    cursor: pointer;
+    font-size: 25px;
+}
+button:hover{
+    color: red;
+    padding: 15px;
+    border-style: none;
+    cursor: pointer;
+    font-size: 25px;
+}
