--- a/WeatherAPI/style.css
+++ b/WeatherAPI/style.css
@@ -1,1 +1,63 @@
+ @import url('https://fonts.googleapis.com/css2?family=Rampart+One&display=swap');
+
+ *{
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+}
+
+body{
+    font-family: "Nunito",sans-serif;
+    background-color: orange;
+}
+
+.input{
+    text-align: center;
+    margin: 100px 0;
+} 
+
+input[type="text"]{
+    height: 50px;
+    width: 400px;
+    background: rgb(244, 250, 250);
+    font-family: "Nunito",sans-serif;
+    font-size: 20px;
+    border-radius: 10px;
+    padding: 10px 10px;
+}
+
+
+
+input[type="submit"]{
+    height: 50px;
+    width: 100px;
+    background: rgba(203, 206, 206, 0.342);
+    font-family: "Nunito",sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 50px;
+}
+
+.display{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    
+}
+
+.temp{
+    color: green;
+    font-family: 'Rampart One', cursive;
+}
+
+h1{
+    text-align: center;
+    font-family: monospace;
+    margin-top: 30px;
+    font-size: 50px;
+}
+
+
+
+
 
